# Leetcode

./: .gitignore  1528_shuffle_string.py  1630_arithmetic_subarrays.py  1816_truncate_sentence.py  557_reverse_words_in_a_string_III.py  Jenkinsfile  TODO  lesson_1.py  linked_list.py  main.html  main.py  main.sql  main1.py  problems.py  pyproject.toml  requirements.txt  synchronizer.py  tasks.py  test.json  test.py  test1.json  topic.json  tours.json
.github/workflows/: main.yml
solutions/1. Two Sum/: 1.go
solutions/1051. Height Checker/: 1051.py
solutions/1071. Greatest Common Divisor of Strings/: 1071.py
solutions/1160. Find Words That Can Be Formed by Characters/: 1160.py
solutions/1171. Remove Zero Sum Consecutive Nodes from Linked List/: 1171.py
solutions/118. Pascal's Triangle/: 118.py
solutions/1189. Maximum Number of Balloons/: 1189.py
solutions/12. Integer to Roman/: 12.py
solutions/1207. Unique Number of Occurrences /: 1207.py
solutions/1217. Minimum Cost to Move Chips to The Same Position/: 1217.py
solutions/1252. Cells with Odd Values in a Matrix/: 1252.py
solutions/1260. Shift 2D Grid/: 1260.py
solutions/1266. Minimum Time Visiting All Points/: 1266.py
solutions/1275. Find Winner on a Tic Tac Toe Game/: 1275.py
solutions/1295. Find Numbers with Even Number of Digits/: 1295.py
solutions/1299. Replace Elements with Greatest Element on Right Side/: 1299.py
solutions/1332. Remove Palindromic Subsequences/: 1332.py
solutions/1337. The K Weakest Rows in a Matrix/: 1337.py
solutions/1370. Increasing Decreasing String/: 1370.py
(+152 files in other folders)
