[tool.poetry]
name = "leetcode-problems"
version = "0.1.0"
description = ""
authors = ["khasanjon <khasanjon-dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.1"
aiogram = "^3.2.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
