[tool.poetry]
name = "leetcode-problems"
version = "0.1.0"
description = ""
authors = ["khasanjon <khasanjon-dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
googlemaps = "^4.10.0"
geopy = "^2.4.1"
httpx = "^0.25.2"
sib-api-v3-sdk = "^7.6.0"
reportlab = "^4.1.0"
ujson = "^5.9.0"
locust = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
